--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="row">
                   <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="about-img" data-aos="fade-right" data-aos-delay="300">
-                        <img src="abilo3.jpg" alt="abilo">
+                        <img src="abilo3.JPG" alt="abilo">
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12">
