--- a/index.html
+++ b/index.html
@@ -60,27 +60,22 @@
   
 
 
-        <section class="about-me" id="about">
+         <section class="about-me" id="about">
             <div class="container">
                 <div class="row">
-                  <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="about-img" data-aos="fade-right" data-aos-delay="300">
-                        <img src="abilo3.JPG" alt="abilo">
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="content" data-aos="fade-left" data-aos-delay="700" >
+                  <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="content">
                         <h1>About</h1>
           
-                        <p>Greetings!! My name is Abdullah Moosa Syed and 
-                         I'm currently working as an Electrical Estimator 
-                         at L&O Technologies Pty Ltd. I have worked in 
-                         Electrical Service Industry for last three years.
-                         My Experiance has taught me that it's an interactive 
-                         process requiring collaboration between multiple teams.
+                        <p data-aos="fade-up" data-aos-delay="500">Greetings!! My name is Abdullah Moosa Syed and <br>
+                         I'm currently working as an Electrical Estimator <br>
+                         at L&O Technologies Pty Ltd. I have worked in <br>
+                         Electrical Service Industry for last three <br>
+                         My Experiance has taught me that it's an interactive <br>
+                         process requiring collaboration between multiple teams <br>
                         </p>
 
-                        <div class="social-media">
+                        <div class="social-media" data-aos="fade-up" data-aos-delay="400">
                             <ul class="nav-list">
                                 <li><a class="icon-link" href="https://www.linkedin.com/in/abdullah-m-syed-02b44915a/"><i class="fab fa-linkedin"></i></a></li>
                                 <li><a class="icon-link" href="https://www.facebook.com/abdullah.m.syed?ref=br_rs"><i class="fab fa-facebook-square"></i></a></li>
@@ -192,7 +187,8 @@
 
 
 
-  <section class="contact" id="contact">
+  
+  <!-- <section class="contact" id="contact">
     <div class="contact-heading">
         <h1>Contact</h1>
         <h6>Lets Work Together</h6>
@@ -215,8 +211,7 @@
             <input type="submit" value="submit">
         </form>
     </div>
-</section>
-
+</section> -->
 <footer class="copyright">
     <div class="up" id="up" onclick="topFunction()">
         <i class="fas fa-chevron-up"></i>
