--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#experience">Experience</a>
                   </li> 
-                <li class="nav-item">
+               <!-- <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
-                </li>  
+                </li> 
+               --!> 
                 <li class="nav-item">
                     <a class="nav-link"href="https://www.google.com"><i class="fab fa-facebook"></i></a>
                   </li>  
