--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
                     <div class="content">
                         <h1>About</h1>
           
-                        <p data-aos="fade-up" data-aos-delay="500">Greetings!! My name is Abdullah Moosa Syed and <br>
-                         I'm currently working as an Electrical Estimator <br>
-                         at L&O Technologies Pty Ltd. I have worked in <br>
-                         Electrical Service Industry for last three <br>
-                         My Experiance has taught me that it's an interactive <br>
-                         process requiring collaboration between multiple teams <br>
+                        <p data-aos="fade-up" data-aos-delay="500">
+                                  Greetings!! My name is Abdullah Moosa Syed and <br>
+                                  I'm currently working as an Electrical Estimator <br>
+                                  at L&O Technologies Pty Ltd. I have worked in <br>
+                                 Electrical Service Industry for last three <br>
+                                 My Experiance has taught me that it's an interactive <br>
+                                 process requiring collaboration between multiple teams <br>
                         </p>
 
                         <div class="social-media" data-aos="fade-up" data-aos-delay="400">
