--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                           he has worked in roles of Field Service Engineer, Sales Engineer, <br>
                           and Electrical Estimator.He is competent in Electrical Design and <br>
                           Cost Consultation, Project Management, Technical Sales, and Estimation. <br> <br>
-                          Abdullah has founded DOER Technologies Pty Ltd to provide efficient <br> 
+                          Abdullah as a director of DOER Technologies Pty Ltd is committed to provide efficient <br> 
                          and cost-effective Engineering services in Electrical and Mechanical industries.
                         </p>
 
@@ -107,7 +107,7 @@
                        <div class="icon-box">
                         <i class="fas fa-calculator"></i>
                        </div>
-                       <h3>Electrical Estimation of Capital Projects</h3>
+                       <h3>Electrical Estimation</h3>
                      </div>
 
                      <div class="service-box">
@@ -159,7 +159,7 @@
                       <div class="icon-box">
                        <i class="fas fa-calculator"></i>
                       </div>
-                      <h3>Electrical wiring</h3>
+                      <h3>Electrical Wiring</h3>
                     </div>
 
                     <div class="service-box">
@@ -186,6 +186,11 @@
 
            <div class="jobs">
             <ul>
+                <li class="date">
+                <h1>DOER Technologies Pty Ltd</h1>
+                 <h6>Director</h6>
+                 <h6 class="data">Present</h6>
+                </li>
                 <li class="date">
                     <h1>L & O Technologies Pty Ltd</h1>
                      <h6>Electrical Estimator</h6>
