--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#experience">Experience</a>
                   </li> 
-               <!-- <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
                 </li> 
-               --!> 
+              
                 <li class="nav-item">
                     <a class="nav-link"href="https://www.google.com"><i class="fab fa-facebook"></i></a>
                   </li>  
@@ -246,7 +246,7 @@
             <input type="submit" value="submit">
         </form>
     </div>
-</section> -->
+</section> 
 <footer class="copyright">
     <div class="up" id="up" onclick="topFunction()">
         <i class="fas fa-chevron-up"></i>
